# tinyAMR

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  exa2tamr.cpp  flash2tamr.cpp  info.cpp
importers/: CMakeLists.txt  exa.cpp  exa.h  flash.cpp  flash.h
tinyAMR/: CMakeLists.txt  Model.cpp  Model.h  TinyAMR.cpp  TinyAMR.h  common.h
tinyAMR/common/: box.h  tamr-common.h  vec.h
